[package]
name = "gib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.21"
log = "0.4"
dirs = "5.0.1"
flexi_logger = "0.25.6"
ctrlc = "3.4.0"
indicatif = "0.17.6"
owo-colors = "3.5.0"
base64ct = {version = "1.6.0", features = ["alloc"]}