[package]
name = "gib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = {version = "1.6.0", features = ["alloc"]}
clap = "4.3.21"
ctrlc = "3.4.0"
dirs = "5.0.1"
flexi_logger = "0.25.6"
hex = "0.4"
indicatif = "0.17.6"
log = "0.4"
owo-colors = "3.5.0"
strum = "0.25.0"
strum_macros = "0.25.0"